--- a/public/tournaments/tournament.css
+++ b/public/tournaments/tournament.css
@@ -130,7 +130,7 @@ header .logo {
     padding-top: 7px;
     cursor: pointer;
     height: 48px;
-    transform: scale(2); 
+    transform: scale(2.35); 
 }
 .name img:hover{
     transform: scale(2.05); 
@@ -422,7 +422,7 @@ footer {
     top: 1.569rem;
     right: 1.169rem;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.369rem;
     color: var(--primary-color);
     z-index: 998; /* Ensure it's above other elements */
 }
@@ -438,14 +438,14 @@ footer {
     transition: 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
-    padding-top: 60px;
+    padding-top: 69px;
 }
 
 .side-navbar a {
-    color: #fff;
+    color: cyan;
     text-decoration: none;
-    padding: 15px 25px;
-    font-size: 1.2rem;
+    padding: 15.69px 30.69px;
+    font-size: 1.169rem;
     transition: 0.3s;
 }
 
@@ -455,9 +455,9 @@ footer {
 
 .close-btn {
     position: absolute;
-    top: 1.45em;
-    right: 1.469em;
-    font-size: 1.5rem;
+    top: 1.269em;
+    right: 1.269em;
+    font-size: 1.269rem;
     color: #fff;
     cursor: pointer;
 }
@@ -489,10 +489,6 @@ footer {
     }
     .navbar {
         display: none;
-    }
-    
-    .detail-item:hover {
-        transform: translateY(-7.69px);
     }
     
     .detail-item i {
@@ -645,11 +641,10 @@ footer {
     }
 
     .tournament-details .details-grid .detail-item {
-        text-align: center;
         position: relative;
-        width: 106.69px;
-        height: 106.69px;
-        border: 2px solid #00ffff;
+        width: 108.69px;
+        height: 108.69px;
+        border: 1.69px solid #00ffff;
         border-radius: 50%;
         background: #000;
         cursor: pointer;
@@ -674,26 +669,22 @@ footer {
         position: absolute;
         padding-right: 100px;
         width: 100%;
-        text-align: center;
         color: #00ffff;
         opacity: 0;
+        margin: 0;
         transition: opacity 0.3s ease;
     }
 
     .tournament-details .detail-item h4 {
-        top: 28%;
+        top: 27%;
         transform: translateY(-50%);
-        font-size: 12.369px;
+        font-size: 12.269px;
         text-align: center;
-        margin: 0;
     }
 
     .tournament-details .detail-item p {
-        top: 62%;
+        top: 63%;
         transform: translateY(-50%);
-        text-align: center;
-        font-size: 8.569px;
-        margin: 0;
     }
 
     .tournament-details .detail-item.active h4,
