--- a/public/about_page/ABJ_ABOUT_STYLE.css
+++ b/public/about_page/ABJ_ABOUT_STYLE.css
@@ -709,7 +709,9 @@ footer {
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
+.mobile-menu-icon {
+    display: none;
+}
 /* Left button */
 .prev-btn {
     left: 10px; /* Position left */
