--- a/public/games_parti/game.css
+++ b/public/games_parti/game.css
@@ -249,7 +249,21 @@ header a{
         opacity: 1;
     }
 }
-
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}.loading-gif {
+    width: 49%;  /* Adjust size as needed */
+      /* Adjust size as needed */
+}
 .button {
     width: 100%;
     text-align: center;
