--- a/public/tournaments/tournament.css
+++ b/public/tournaments/tournament.css
@@ -41,46 +41,14 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999;
-}
-.loader {
-    width: 90px;
-    aspect-ratio: 1;
-    color: #514b82;
-    background: conic-gradient( from 134deg at top,currentColor  92deg,#0000 0);
-    position: relative;
-    animation: l22-0 2s infinite linear;
-  }
-  .loader:before,
-  .loader:after {
-    content: "";
-    position: absolute;
-    width: 50%;
-    height: 50%;
-    background: currentColor; 
-    transform-origin: top right;
-    clip-path: polygon(100% 0,100% 100%,0 100%);
-    inset: auto 100% 0 auto;
-    animation: l22-1 1s infinite linear alternate;
-  }
-  .loader:after {
-    inset:auto auto 0 100%;
-    transform-origin: top left;
-    --s:-1;
-    clip-path: polygon(0 0,100% 100%,0 100%);
-  }
-  @keyframes l22-0 {
-   0% ,49.99% {transform:scaleY(1)}
-   50%,90%    {transform:scaleY(-1)}
-   100%       {transform:scaleY(-1) rotate(180deg)}
-  }
-  @keyframes l22-1 {
-   0% ,30%   {transform:rotate(calc(var(--s,1)*0))}
-   70%,100%  {transform:rotate(calc(var(--s,1)*180deg))}
+}.loading-gif {
+    width: 49%;  /* Adjust size as needed */
+      /* Adjust size as needed */
 }
 
 header {
@@ -94,7 +62,7 @@ header {
     align-items: center;
     transition: 0.7s;
     padding: 18px 100px;
-    z-index: 100000;
+    z-index: 9998;
 }
 
 .navbar a{
