--- a/public/tournaments/hero.css
+++ b/public/tournaments/hero.css
@@ -1,8 +1,6 @@
-
 .social{
     margin: 0 auto 0 50px;
 }
-
 .social a{
     display: inline-flex;
     justify-content: center;
@@ -15,11 +13,9 @@
     text-decoration: none;
     transition: all 0.5s ease;
 }
-
 .social a:hover{
     background: #fff;
 }
-
 .social a i{
     display: flex;
     font-size: 25px;
@@ -27,25 +23,20 @@
     padding-top: 6px;
     transition: all 0.5s ease;
 }
-
 .social a:hover i{
     color: #444;
 }
-
-
 .banner{
     position: relative;
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
 }
-
 .slider .slide{
     position: absolute;
     width: 100%;
     height: 100vh;
 }
-
 .slide img{
     position: absolute;
     object-fit: cover;
@@ -56,12 +47,10 @@
     z-index: -1;
     transition: 0.3 ease;
 }
-
 .slide.active img{
     z-index: -1;
     opacity: 1;
 }
-
 .slide .left-info{
     position: absolute;
     top: 0;
@@ -71,13 +60,11 @@
     transform: translateX(-100%);
     transition: 0s;
 }
-
 .slide.active .left-info{
     transform: translateX(0);
     z-index: 1;
     transition: 1s ease;
 }
-
 .left-info .penetrte-blur{
     position: absolute;
     width: 100%;
@@ -88,20 +75,18 @@
     justify-content: flex-end;
     align-items: center;
 }
-
 .penetrte-blur h1{
-    font-size: 160px;
+  font-family: "Orbitron", sans-serif;
+    font-size: 140px;
      color: #00ffff;
     text-shadow: 0 0 10px rgba(0, 0, 0, 5);
 }
-
 .left-info .content{
     position: absolute;
     bottom: 8%;
     left: 10%;
     color: #00ffff;
 }
-
 .content h3{
     font-size: 27px;
 }
@@ -110,7 +95,6 @@
     font-size: 18.3px;
     margin: 10px 0 1.5rem;
 }
-
 .content .btn{
     display: inline-block;
     padding: 0.6rem 1rem;
@@ -124,12 +108,10 @@
     font-weight: 600;
     transition: all 0.5s ease;
 }
-
 .content .btn:hover{
     background: transparent;
     color: #00ffff;
 }
-
 .slide .right-info{
     position: absolute;
     top: 0;
@@ -142,7 +124,6 @@
     transform: translateX(100%);
     transition: 0s;
 }
-
 .slide.active .right-info{
     transform: translateX(0);
     z-index: 1;
@@ -150,10 +131,10 @@
 }
 
 .right-info h1{
-    font-size: 160px;
+    font-size: 140px;
+    font-family: "Orbitron", sans-serif;
     color: #00ffff;
 }
-
 .right-info h3{
     position: absolute;
     font-size: 65px;
@@ -162,7 +143,6 @@
     transform: translateY(190%);
     margin-left: 1.3rem;
 }
-
 .navigation{
     position: absolute;
     bottom: 8%;
@@ -183,7 +163,6 @@
     align-items: center;
     justify-content: center;
 }
-
 .navigation span:nth-child(1){
     background: transparent;
 }
@@ -191,7 +170,6 @@
 .navigation span:nth-child(1):hover{
     background: #fff;
 }
-
 .navigation span i{
     color: #444;
     transition: all .5s ease;
@@ -200,22 +178,17 @@
 .navigation span:nth-child(1) i{
     color: #00ffff;
 }
-
 .navigation span:nth-child(1):hover i{
     color: #444;
 }
-
-
 
 @media (max-width: 1200px) {
     .penetrte-blur h1 {
       font-size: 120px;
     }
-  
     .right-info h1 {
       font-size: 120px;
     }
-  
     .right-info h3 {
       font-size: 50px;
     }
@@ -237,19 +210,15 @@
     .right-info h1 {
       font-size: 100px;
     }
-  
     .right-info h3 {
       font-size: 40px;
     }
-  
     .content h3 {
       font-size: 24px;
     }
-  
     .content p {
       font-size: 16px;
     }
-  
     .content .btn {
       font-size: 1.1rem;
     }
@@ -318,16 +287,13 @@
     .social {
       margin: 0 auto 0 20px;
     }
-  
     .social a {
       width: 35px;
       height: 35px;
     }
-  
     .social a i {
       font-size: 20px;
     }
-  
     .penetrte-blur h1 {
       font-size: 60px;
     }
@@ -335,15 +301,12 @@
     .content h3 {
       font-size: 18px;
     }
-  
     .content p {
       font-size: 12px;
     }
-  
     .content .btn {
       font-size: 0.9rem;
     }
-  
     .navigation span {
       width: 2.5rem;
       height: 2.5rem;
