--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 :root {
     --primary-color: #00ffff;
     --secondary-color: #ff00ff;
